# tisd

./: .gitignore  readme.md
lab_01/: L1.docx  a.out  build.sh  defines.h  funcs.c  funcs.h  main.c  notes.txt  plan.md  struct.h
lab_02/: L2.docx  defines.h  funcs.c  funcs.h  main.c  makefile  structs.h  structs.h.gch  table.txt
lab_03/: CMakeLists.txt  makefile
lab_04/: CMakeLists.txt  makefile
lab_04/inc/: adt.h  arr.h  defs.h  expr.h  list.h  my_time.h  text.h
lab_04/src/: arr.c  expr.c  list.c  main.c  my_time.c  text.c
lab_04_test/: algoritm.md
lab_04_test/inc/: array_operations.h  expression.h  list_operations.h  main_inc.h  print_menu.h  structs.h  time_count.h
lab_04_test/src/: array_operations.c  expression.c  main.c  print_menu.c  time_count.c
vim_config/: .vimrc
